# roml

./: .foundry.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MODELING_API.md  README.md  SECURITY.md  config.yaml  deny.toml  log4rs.yaml  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci-core.yml  ci-highs.yml  ci-policy.yml
.planning/: DECISIONS.md  PROJECT.md  REQUIREMENTS-V2.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TRACEABILITY.md
.planning/adr/: ADR-001-backend-contract-freeze.md
.planning/agents/: ROML-M1R-COORDINATOR.md  ROML-M1R-INDEPENDENT-REVIEWER.md
.planning/milestones/: ROML-M1-NATIVE-BACKENDS-RELEASE.md  ROML-M1-REQUIREMENTS.md  ROML-M1-STATE.md
.planning/phases/01-backend-contract-migration-closure/: phase.md
.planning/phases/02-highs-projection-session-rewrite/: phase.md
.planning/phases/03-native-differential-fault-qualification/: phase.md
.planning/phases/04-cross-platform-package-qualification/: phase.md
.planning/phases/06-07-commercial-backend-tracks/: phase.md
.planning/phases/08-09-release-and-operations/: phase.md
.planning/phases/09-truth-reset-and-candidate-admission/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md  phase.md
.planning/phases/10-backend-contract-migration-closure/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-highs-projection-session-rewrite/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-CONTEXT.md  11-DISCUSSION-LOG.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-native-differential-and-fault-qualification/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-CONTEXT.md  12-VERIFICATION.md
.planning/phases/13-cross-platform-and-package-qualification/: 13-CONTEXT.md
benches/: model_bench.rs
docs/knowledge/: current_context.md  steward_protocol.md
docs/release/: ARCHITECTURE_DECISIONS.md  CODING_AGENT_PROMPT.md  CURRENT_MAIN_DELTA_AUDIT.md  PACKAGING.md  PRINCIPAL_ENGINEERING_AUDIT.md  README.md  RELEASE_CHECKLIST.md  ROML-M1-CODING-AGENT-PROMPT.md  ROML-M1R-CODING-AGENT-PROMPT.md  ROML-ULTRA-MEGA-PLANNING-PACKET.md  SUPPORT_MATRIX.md  XPRESS_BINDING_DECISION.md
examples/: parameter_update.rs  simple_lp.rs
roml-highs/: Cargo.toml  build.rs
roml-highs/src/: adapter.rs  bindings.rs  callback.rs  error.rs  ffi.rs  index_map.rs  lib.rs  lifecycle.rs  projection.rs  session.rs  solution.rs
roml-highs/tests/: conformance.rs  contract_tests.rs  integration.rs  solve_observables_tests.rs
roml-mosek/: Cargo.toml  MOSEK_API_CHEATSHEET.md  build.rs
roml-mosek/src/: adapter.rs  ffi.rs  index_map.rs  lib.rs
roml-mosek/tests/: integration.rs
roml-xpress/: Cargo.toml  build.rs
roml-xpress/src/: adapter.rs  ffi.rs  index_map.rs  lib.rs
roml-xpress/tests/: integration.rs
src/: delta.rs  journal.rs  lib.rs  logging.rs  revision.rs  snapshot.rs  sync.rs  transaction.rs
src/expr/: linear.rs  mod.rs
src/id/: arena.rs  mod.rs
src/model/: changelog.rs  coefficient.rs  constraint.rs  mod.rs  objective.rs  parameter.rs  transaction.rs  validation.rs  variable.rs
src/solution/: mod.rs
src/solver/: backend.rs  callback.rs  conformance.rs  mod.rs  reference.rs  request.rs  session.rs
src/value_expr/: mod.rs
tests/: backend_contract.rs  changelog_integration.rs  conformance.rs  differential_harness.rs  macro_api.rs  model_characterization.rs  semicontinuous_recovery.rs  status_negotiation_tests.rs  sync_characterization.rs
tools/steward/: steward  steward_freshness.py
(+30 files in other folders)
