[workspace]
members = [".", "roml-highs", "roml-mosek"]
resolver = "2"

[package]
name = "roml"
version = "0.1.0"
edition = "2021"
description = "A production-grade, incremental MILP modeling library"

[dependencies]
log = "0.4"
log4rs = "1.4.0"
rand = "0.9"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"


[profile.dev]
opt-level = 0
