[workspace]
members = [".", "roml-highs", "roml-mosek", "roml-xpress"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Surya Krishnan"]
repository = "https://github.com/sk-surya/roml"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
log = "0.4"

[package]
name = "roml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "A pre-release, incremental MILP modeling library"
exclude = [
    ".claude/",
    "AGENTS.md",
    ".gitignore",
    "docs/release/evidence/",
    "docs/superpowers/",
    ".github/",
]

[dependencies]
log = { workspace = true }

[dev-dependencies]
rand = "0.9"

[[example]]
name = "simple_lp"
path = "examples/simple_lp.rs"

[[example]]
name = "parameter_update"
path = "examples/parameter_update.rs"

[profile.dev]
opt-level = 0
