[package]
name = "roml-highs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "HiGHS solver adapter for roml"

[dependencies]
log = { workspace = true }
roml = { version = "0.1.0", path = ".." }

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
