[package]
name = "roml-xpress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "FICO Xpress solver adapter for roml"
publish = false

[dependencies]
log = { workspace = true }
roml = { version = "0.1.0", path = ".." }

[build-dependencies]

[dev-dependencies]
